Implement Yahoo Finance via Vercel serverless function
- Created /api/stock-price.ts serverless function using yahoo-finance2
- Bypasses CORS issues by making server-side API calls
- Updated investmentService.ts to call our API endpoint
- Kept Supabase global rate limiting (15 min between calls)
- Kept local caching (15 min) for performance
- Added @vercel/node and yahoo-finance2 dependencies
- Works on Vercel free tier (100GB bandwidth, 100 hours/month)
- More reliable than Alpha Vantage (no 25 calls/day limit)
- Added API documentation in api/README.md

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
+    "yahoo-finance2": "^2.14.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@vercel/node": "^5.5.11",
     "@vitejs/plugin-react": "^5.1.1",
     "@vitest/ui": "^2.1.8",
     "autoprefixer": "^10.4.22",
