--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "workspaces": [
+    "backend",
+    "shared"
+  ],
   "scripts": {
     "dev": "vite",
+    "dev:backend": "npm run dev --workspace=backend",
+    "dev:all": "concurrently \"npm run dev\" \"npm run dev:backend\"",
     "build": "tsc -b && vite build",
+    "build:backend": "npm run build --workspace=backend",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest --run",
