--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@
 
 VITE_SUPABASE_URL=your_supabase_project_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# Backend API Configuration
+VITE_API_URL=http://localhost:3001
+
+# Feature Flags
+# Set to 'true' to use backend API, 'false' to use direct Supabase calls
+VITE_USE_BACKEND_ACCOUNTS=false
