--- a/backend/package.json
+++ b/backend/package.json
@@ -11,31 +11,38 @@
     "test:watch": "jest --watch",
     "lint": "eslint src --ext .ts"
   },
-  "keywords": ["finance", "api", "backend"],
+  "keywords": [
+    "finance",
+    "api",
+    "backend"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4",
-    "dotenv": "^16.3.1",
     "@supabase/supabase-js": "^2.39.0",
-    "tsyringe": "^4.8.0",
-    "reflect-metadata": "^0.2.1"
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "reflect-metadata": "^0.2.1",
+    "tsyringe": "^4.8.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
     "@types/compression": "^1.7.5",
-    "typescript": "^5.3.3",
-    "ts-node-dev": "^2.0.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.6",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
+    "fast-check": "^4.3.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.11",
-    "ts-jest": "^29.1.1"
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.1.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
   }
 }
