--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,12 +1,8 @@
 {
   "version": 2,
-  "buildCommand": "npm run build && npm run build:backend",
+  "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index.js"
-    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
