--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,18 +1,8 @@
 {
-  "version": 2,
-  "buildCommand": "npm run build && npm run build:backend",
-  "outputDirectory": "dist",
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
